# agentbridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  vercel.json
.github/workflows/: adapter-godot.yml  adapter-unity.yml  conformance.yml  harness-python.yml
_site/: 404.html  index.html  sitemap.xml
_site/adapters/godot/: index.html
_site/adapters/unity/: index.html
_site/changelog/: index.html
_site/examples/godot-quickstart/: index.html
_site/examples/unity-quickstart/: index.html
_site/harness/cli/: index.html
_site/harness/python/: index.html
_site/harness/replay/: index.html
_site/search/: search_index.json
_site/spec/conformance/: index.html
_site/spec/protocol/: index.html
_site/spec/schemas/: index.html
adapters/godot/: conformance-godot-0.1.0.md
adapters/unity/: README.md
docs/: changelog.md  index.md
docs/adapters/: godot.md  unity.md
docs/examples/: godot-quickstart.md  unity-quickstart.md
docs/harness/: cli.md  python.md  replay.md
docs/spec/: conformance.md  protocol.md  schemas.md
harness/python/: README.md  pyproject.toml
harness/python/agentbridge/: __init__.py  cli.py  client.py  orchestrator.py  protocol.py  replay.py
harness/python/tests/: test_client.py  test_orchestrator_telemetry.py  test_protocol.py
mcp/agentbridge_mcp_server/: server.py  test_server.py
observability/: agent_session_emitter.py  log_shipper.py  test_agent_session_emitter.py  test_log_shipper.py
scripts/: emit-status.py  run-tests.py
spec/: AGENTBRIDGE_SPEC.md
spec/conformance/: conformance_suite.py
(+27 files in other folders)
