[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbridge"
version = "0.1.0"
description = "AgentBridge Python harness -- spec-validated client + replay + orchestrator for AI playtesting any compliant game adapter."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kruz Holt"}]
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1"
]

[project.scripts]
agentbridge = "agentbridge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentbridge*"]
